// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Receive it renders correctly 1`] = `
<div
  class="Box-tuskkk-0 Receive__Wrapper-sc-1yod7sz-0 aKUmh"
  display="flex"
>
  <div
    class="Box-tuskkk-0 hiEcIf"
    display="flex"
  >
    <div
      class="Box-tuskkk-0 lpgBKf"
      display="flex"
    >
      <div
        class="Box-tuskkk-0 ghCKpQ"
        color="background.screen"
        display="flex"
        size="6"
      >
        <h3
          class="Glyph__GlyphText-sc-1xcgbq7-0 fuRHwt"
        >
          Rc
        </h3>
      </div>
      <p
        class="Typography__TextBase-sc-1uzug1e-2 eUufXZ"
        color="core.primary"
        font-family="RT-Alias-Grotesk"
        font-size="3"
        font-weight="400"
      >
        Receive Filecoin
      </p>
    </div>
    <div
      class="Box-tuskkk-0 lpgBKf"
      display="flex"
    >
      <button
        class="IconButtons__IconButtonBase-sc-1st7bxm-0 jTSrem"
        display="inline-block"
        type="button"
      >
        <svg
          class="Icons__IconBase-jyp17t-0 hfFiWB"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M19.7333 4.2669C19.3776 3.91103 18.801 3.91103 18.4453 4.2669L11.9994 10.7166L5.55552 4.26885C5.19986 3.91299 4.62323 3.91299 4.26757 4.26885C3.91191 4.62472 3.91191 5.20169 4.26757 5.55756L10.7115 12.0053L4.27793 18.4426C3.92228 18.7985 3.92228 19.3755 4.27793 19.7313C4.63359 20.0872 5.21022 20.0872 5.56587 19.7313L11.9994 13.294L18.435 19.7333C18.7906 20.0892 19.3672 20.0892 19.7229 19.7333C20.0786 19.3774 20.0786 18.8005 19.7229 18.4446L13.2874 12.0053L19.7333 5.5556C20.0889 5.19974 20.0889 4.62276 19.7333 4.2669Z"
            fill="#5E26FF"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
  <p
    class="Typography__TextBase-sc-1uzug1e-2 evfVTT"
    font-family="RT-Alias-Grotesk"
    font-size="3"
    font-weight="400"
  >
    To receive Filecoin, share your address with the sender
  </p>
  <div
    class="Box-tuskkk-0 Address__Wrapper-sc-12hm3d7-0 bKmyJT"
    width="14"
  >
    <div
      class="Box-tuskkk-0 fjrNYs"
      display="flex"
    >
      <p
        class="Typography__TextBase-sc-1uzug1e-2 LZLLr"
        font-family="RT-Alias-Grotesk"
        font-size="3"
        font-weight="400"
      >
        t1
      </p>
      <p
        class="Typography__TextBase-sc-1uzug1e-2 czlDxc"
        font-family="RT-Alias-Grotesk"
        font-size="3"
        font-weight="400"
      >
        ●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●
      </p>
      <p
        class="Typography__TextBase-sc-1uzug1e-2 LZLLr"
        font-family="RT-Alias-Grotesk"
        font-size="3"
        font-weight="400"
      >
        izpy
      </p>
    </div>
    <div
      class="Box-tuskkk-0 jcbfAF"
      display="flex"
      height="100%"
    >
      <button
        class="Address__InlineButton-sc-12hm3d7-1 fdmssE"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
        width="7"
      >
        Copy
      </button>
      <button
        class="Address__InlineButton-sc-12hm3d7-1 fdmssE"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
        width="7"
      >
        Reveal
      </button>
    </div>
  </div>
</div>
`;

exports[`Receive it reveals the address when the user clicks reveal 1`] = `
<div
  class="Box-tuskkk-0 Receive__Wrapper-sc-1yod7sz-0 aKUmh"
  display="flex"
>
  <div
    class="Box-tuskkk-0 hiEcIf"
    display="flex"
  >
    <div
      class="Box-tuskkk-0 lpgBKf"
      display="flex"
    >
      <div
        class="Box-tuskkk-0 ghCKpQ"
        color="background.screen"
        display="flex"
        size="6"
      >
        <h3
          class="Glyph__GlyphText-sc-1xcgbq7-0 fuRHwt"
        >
          Rc
        </h3>
      </div>
      <p
        class="Typography__TextBase-sc-1uzug1e-2 eUufXZ"
        color="core.primary"
        font-family="RT-Alias-Grotesk"
        font-size="3"
        font-weight="400"
      >
        Receive Filecoin
      </p>
    </div>
    <div
      class="Box-tuskkk-0 lpgBKf"
      display="flex"
    >
      <button
        class="IconButtons__IconButtonBase-sc-1st7bxm-0 jTSrem"
        display="inline-block"
        type="button"
      >
        <svg
          class="Icons__IconBase-jyp17t-0 hfFiWB"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M19.7333 4.2669C19.3776 3.91103 18.801 3.91103 18.4453 4.2669L11.9994 10.7166L5.55552 4.26885C5.19986 3.91299 4.62323 3.91299 4.26757 4.26885C3.91191 4.62472 3.91191 5.20169 4.26757 5.55756L10.7115 12.0053L4.27793 18.4426C3.92228 18.7985 3.92228 19.3755 4.27793 19.7313C4.63359 20.0872 5.21022 20.0872 5.56587 19.7313L11.9994 13.294L18.435 19.7333C18.7906 20.0892 19.3672 20.0892 19.7229 19.7333C20.0786 19.3774 20.0786 18.8005 19.7229 18.4446L13.2874 12.0053L19.7333 5.5556C20.0889 5.19974 20.0889 4.62276 19.7333 4.2669Z"
            fill="#5E26FF"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
  <p
    class="Typography__TextBase-sc-1uzug1e-2 evfVTT"
    font-family="RT-Alias-Grotesk"
    font-size="3"
    font-weight="400"
  >
    To receive Filecoin, share your address with the sender
  </p>
  <div
    class="Box-tuskkk-0 Address__Wrapper-sc-12hm3d7-0 bKmyJT"
    width="14"
  >
    <p
      class="Typography__TextBase-sc-1uzug1e-2 gApeFg"
      font-family="RT-Alias-Grotesk"
      font-size="3"
      font-weight="400"
    >
      t137sjdbgunloi7couiy4l5nc7pd6k2jmq32vizpy
    </p>
    <div
      class="Box-tuskkk-0 jcbfAF"
      display="flex"
      height="100%"
    >
      <button
        class="Address__InlineButton-sc-12hm3d7-1 fdmssE"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
        width="7"
      >
        Copy
      </button>
      <button
        class="Address__InlineButton-sc-12hm3d7-1 fdmssE"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
        width="7"
      >
        Hide
      </button>
    </div>
  </div>
</div>
`;
